* Replace SdsExceptions in the `SdsFilter` with `SdsFilterException`. * Fix warnings is `SdsFilterTests`